# filter-repo-rs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  TESTING.md  cliff.toml
.cargo/: config.toml
.github/: pull_request_template.md
docs/: BUILD-QUICK-START.md  CLI-CONVERGENCE.zh-CN.md  CROSS-COMPILE-GUIDE.md  ISSUE-CHECKLIST.md  STATUS.md
filter-repo-rs/: Cargo.toml  README.md
filter-repo-rs/benches/: commit_rewrite.rs  detect.rs  filechange.rs  glob_path.rs  mailmap.rs  replacer.rs  sha_lookup.rs  stream_e2e.rs
filter-repo-rs/src/: analysis.rs  backup.rs  commit.rs  detect.rs  error.rs  filechange.rs  finalize.rs  git_config.rs  gitutil.rs  lib.rs  limits.rs  main.rs  message.rs  migrate.rs  opts.rs  pathutil.rs  pipes.rs  sanity.rs  stream.rs  tag.rs
filter-repo-rs/src/sanity/: already_ran.rs  checks.rs  debug.rs  sensitive.rs
filter-repo-rs/tests/: README.md  already_ran_integration.rs  analyze.rs  bdd_cli_scenarios.rs  blobs.rs  blobs_binary_integrity.rs  blobs_more.rs  cleanup.rs  cli.rs  config.rs  config_integration.rs  detect_secrets.rs  edge_cases.rs  errors.rs  identity_rewrite.rs  memory.rs  messages.rs  messages_regex.rs  multi_feature.rs  new_sanity_options.rs  paths.rs  paths_refs_integration.rs  performance_boundary.rs  platform.rs  platform_extended.rs  prune.rs  rename.rs  replace.rs  reports.rs  sanity_comprehensive.rs  sensitive.rs  stream.rs  unit.rs
filter-repo-rs/tests/common/: fake_secrets.rs  mod.rs
scripts/: README_PERF.md  benchmark.sh  build-cross.bat  build-cross.sh  create-perf-test-repo.sh  memory_profile.sh  perf_test.py  verify-build.sh
(+2 files in other folders)
