[package]
name = "filter-repo-rs"
version = "0.2.0"
edition = "2021"
description = "Prototype of git-filter-repo in Rust: minimal export->filter->import pipeline"
license = "MIT"

[dependencies]
regex = "1"
memchr = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7.1.1"
toml = "0.8"
unicode-normalization = "0.1"
crossbeam = "0.8"
rayon = "1.10"
aho-corasick = "1.1"

[lib]
name = "filter_repo_rs"
path = "src/lib.rs"

[[bin]]
name = "filter-repo-rs"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"
filetime = "0.2"
