[package]
name = "filter-repo-rs"
version = "1.0.0"
edition = "2021"
description = "Fast, safe Git history rewriting in Rust — remove secrets, slim repos, restructure paths"
license = "MIT"
repository = "https://github.com/Cactusinhand/filter-repo-rs"
keywords = ["git", "filter", "rewrite", "history", "repository"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
regex = "1"
memchr = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7.1.1"
toml = "0.8"
unicode-normalization = "0.1"
crossbeam = "0.8"
rayon = "1.10"
aho-corasick = "1.1"
colored = "2"

[lib]
name = "filter_repo_rs"
path = "src/lib.rs"

[[bin]]
name = "filter-repo-rs"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"
filetime = "0.2"
